--- a/style.css
+++ b/style.css
@@ -8,24 +8,83 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.btn{
-    width: 100px;
-    height: 100px;
-    font-size: 25px;
-}
-
 .grid-container{
     display: grid;
     grid-template-columns: repeat(3,100px);
-    margin: 100px auto;
+    margin: 30px auto;
     justify-content: center;
 }
-h1{
+
+.heading{
     text-align: center;
+    background-color: rgb(1, 146, 154);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 34px;
+    padding: 10px;
 }
-.turn,.winner,.restart{
+.turn,.winner{
     text-align: center;
     font-size: 28px;
     margin: 20px;
 }
 
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn{
+    width: 100px;
+    height: 100px;
+    font-size: 25px;
+}
+.restart{
+    padding: 10px 25px;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.scores{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    max-width: 80vw;
+    justify-items: center;
+    margin: auto;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+
+
+footer {
+  text-align: center;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+  margin-top: 40px;
+  font-weight: 600;
+}
+footer p{
+  display: flex;
+  gap: 10px;
+}
+footer p a{
+  display: flex;
+  align-items: center;
+}
+
+
+@media (width<=400px) {
+    .heading{
+        font-size: 27px;
+    }
+    .scores{
+        font-size: 16px;
+    }
+}
