--- a/style.css
+++ b/style.css
@@ -1,66 +1,67 @@
 /* Reset some default styles */
-*,*::after,*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: black;
-    color: white;
-}
-
-.grid-container{
-    display: grid;
-    grid-template-columns: repeat(3,100px);
-    margin: 30px auto;
-    justify-content: center;
+body {
+  background-color: black;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.heading{
-    text-align: center;
-    background-color: rgb(1, 146, 154);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 34px;
-    padding: 10px;
-}
-.turn,.winner{
-    text-align: center;
-    font-size: 28px;
-    margin: 20px;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  margin: 30px auto;
+  justify-content: center;
 }
 
-
-.btn-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.heading {
+  text-align: center;
+  background-color: rgb(1, 146, 154);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 34px;
+  padding: 10px;
 }
-.btn{
-    width: 100px;
-    height: 100px;
-    font-size: 25px;
-}
-.restart{
-    padding: 10px 25px;
-    border-radius: 10px;
-    font-size: 20px;
-}
-
-.scores{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    max-width: 80vw;
-    justify-items: center;
-    margin: auto;
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 20px;
+.turn,
+.winner {
+  text-align: center;
+  font-size: 28px;
+  margin: 20px;
 }
 
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn {
+  width: 100px;
+  height: 100px;
+  font-size: 25px;
+}
+.restart {
+  padding: 10px 25px;
+  border-radius: 10px;
+  font-size: 20px;
+}
 
+.scores {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 80vw;
+  justify-items: center;
+  margin: auto;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 20px;
+}
 
 footer {
   text-align: center;
@@ -72,21 +73,20 @@ footer {
   margin-top: 40px;
   font-weight: 600;
 }
-footer p{
+footer p {
   display: flex;
   gap: 10px;
 }
-footer p a{
+footer p a {
   display: flex;
   align-items: center;
 }
 
-
 @media (width<=400px) {
-    .heading{
-        font-size: 27px;
-    }
-    .scores{
-        font-size: 16px;
-    }
+  .heading {
+    font-size: 27px;
+  }
+  .scores {
+    font-size: 16px;
+  }
 }
